# graph-enriched-lakehouse

./: .env.sample  .gitignore  GENIE_TEST_GUIDE.md  README.md  advance_genie.md  ifix-multi.md  multi-agent.md  multi-mcp-testplan.md  sql-semantics.md
.github/: dependabot.yml
agentic-commerce/: .env.sample  .gitignore  CLAUDE.md  README.md  SUMMARY.md  pyproject.toml
agentic-commerce/demo-client/: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.yml  databricks.yml  package.json  pyproject.toml  tsconfig.json
agentic-commerce/demo-client/scripts/: deploy_from_env.py
agentic-commerce/demo-client/src/agentic_commerce/backend/: app.py  demo_adapter.py  models.py  router.py  sample_data.py  serving_client.py
agentic-commerce/demo-client/src/agentic_commerce/backend/core/: _config.py
agentic-commerce/demo-client/src/agentic_commerce/ui/: index.html
agentic-commerce/demo-client/src/agentic_commerce/ui/lib/: api.ts  demo-client.ts  demo-data.ts
agentic-commerce/demo-client/src/agentic_commerce/ui/routes/: index.tsx
agentic-commerce/demo-client/src/agentic_commerce/ui/types/: routeTree.gen.ts
agentic-commerce/demo-client/tests/: test_demo_backend.py
docs/: FOLLOW_UP.md  SECURITY_SUPPLY_CHAIN.md
finance-genie/: .env.sample  .gitignore  0 - Required Setup.ipynb  00_required_setup.ipynb  00_setup_and_data.py  01_neo4j_ingest.ipynb  01_neo4j_ingest.py  02_aura_gds_guide.py  03_pull_and_model.ipynb  03_pull_and_model.py  ADMIN_GUIDE.md  APP_PROPOSAL.md  (+24 more)
finance-genie/accelerator/: .env.sample  README.md  pyproject.toml
finance-genie/accelerator/agent_modules/: demo_utils.py  genie_test.py  genie_test_before.py  neo4j_ingest.py  pull_gold_tables.py
finance-genie/analyst-client/: README.md  app.py  app.yaml  backend.py  env.sample  pyproject.toml  requirements.txt
finance-genie/analyst-client/scripts/: deploy_app.sh
finance-genie/analyst-client/static/: app.js  index.html  style.css
finance-genie/analyst-client/tests/: conftest.py  test_backend_contract.py  test_ui_contract.py
finance-genie/apx-demo/: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.yml  databricks.yml  package.json  pyproject.toml  tsconfig.json
finance-genie/apx-demo/scripts/: deploy.sh
finance-genie/apx-demo/src/fraud_analyst/backend/: models.py
finance-genie/apx-demo/src/fraud_analyst/backend/core/: _config.py
finance-genie/apx-demo/src/fraud_analyst/backend/services/: __init__.py  accounts.py  genie.py  loader.py  sql.py
finance-genie/apx-demo/src/fraud_analyst/ui/: index.html
finance-genie/apx-demo/src/fraud_analyst/ui/components/: NetworkPreview.tsx  ReportModal.tsx  RingThumb.tsx  Stepper.tsx
finance-genie/apx-demo/src/fraud_analyst/ui/routes/: __root.tsx
finance-genie/apx-demo/src/fraud_analyst/ui/routes/_workbench/: analyze.tsx
finance-genie/apx-demo/src/fraud_analyst/ui/styles/: globals.css
finance-genie/apx-demo/src/fraud_analyst/ui/types/: routeTree.gen.ts
finance-genie/automated/: .env.sample  README.md  compare_genie_runs.py  config.py  generate_data.py  genie_instructions.md  provision_genie_spaces.py  pyproject.toml  run_existing_data_pipeline.py  schema.sql  setup_secrets.sh  upload_and_create_tables.sh  verify_fraud_patterns.py
finance-genie/automated/agent_modules/: demo_utils.py  genie_run.py  genie_run_after.py  genie_test.py  genie_test_before.py  gold_constants.py  gold_schema.sql  neo4j_ingest.py  neo4j_secrets.py  pull_gold_tables.py  validate_gold_tables.py
finance-genie/automated/cli/: __init__.py
finance-genie/automated/diagnostics/: verify_fraud_patterns.py
finance-genie/automated/jobs/: 01_genie_run_before.py  02_neo4j_ingest.py  03_pull_gold_tables.py  04_validate_gold_tables.py  05_genie_run_after.py  _genie_run_artifact.py  _gold_constants.py  _gold_table_checks.py  _neo4j_secrets.py  cat4_operational.py  cat5_merchant.py  compare_report.py  demo_utils.py  genie_run.py  genie_run_after.py  genie_run_artifact.py  genie_run_before.py  gold_constants.py  neo4j_ingest.py  neo4j_secrets.py  pull_gold_tables.py  test_before_after.py  test_hub_question.py  test_refined_after.py  validate_gold_tables.py
finance-genie/automated/setup/: checks_genie_csv.py  checks_structural.py  generate_data.py  provision_genie_spaces.py  verify_fraud_patterns.py
finance-genie/automated/sql/: gold_schema.sql  schema.sql
finance-genie/automated/validation/: _common.py  diagnose_similarity.py  run_and_verify_gds.py  run_gds.py  validate_cluster.py  validate_neo4j.py  validate_neo4j_graph.py  verify_gds.py
finance-genie/multi-agent-demo/: .env.sample  README.md  config.py  demo-agent.md  finance_graph_supervisor_agent.py  mlflow.db  presenter-script.md  pyproject.toml  setup_secrets.sh  simple_finance_agnet.py
finance-genie/multi-agent-demo/cli/: __init__.py  __main__.py
finance-genie/multi-agent-demo/jobs/: 00_validate_demo_preconditions.py  01_deploy_agent.py  02_validate_endpoint.py  _job_bootstrap.py
finance-genie/multi-agent-demo/scripts/: deploy_all.sh  local_agent_server.py  local_agent_smoke.py  start_local.sh  start_remote.sh  stop_local.sh  stop_remote.sh  test_local.sh  test_remote.sh
finance-genie/multi-agent-demo/setup/: provision_connection.py
finance-genie/multi-agent-demo/validation/: delete_endpoint.py  query_endpoint.py  validate_endpoint.py
finance-genie/simple-finance-agent/: .env.sample  README.md  config.py  pyproject.toml  simple_finance_agent.py
finance-genie/simple-finance-agent/cli/: __init__.py  __main__.py
finance-genie/simple-finance-agent/jobs/: 00_validate_demo_preconditions.py  01_deploy_agent.py  02_validate_endpoint.py  _job_bootstrap.py
finance-genie/simple-finance-agent/scripts/: deploy_all.sh  start_remote.sh  stop_remote.sh  test_local.sh  test_remote.sh
finance-genie/simple-finance-agent/validation/: delete_endpoint.py  query_endpoint.py  validate_endpoint.py
sql-semantics/: README.md  databricks.yml  pyproject.toml
sql-semantics/src/sql_semantics/: finance_genie.py  local_demo.py  upload_questions.py
sql-semantics/tests/: test_local_demo.py  test_preset.py
(+323 files in other folders)
