[project]
name = "finance-genie-analyst-client"
version = "0.1.0"
description = "Fraud signal explorer analyst client for Databricks Apps."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.74.0",
    "databricks-sql-connector>=4.0.0",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "neo4j>=5.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "playwright>=1.50",
    "pytest>=8.0",
    "pytest-playwright>=0.7",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real_backend: tests that require configured Neo4j and Databricks services",
]
