[project]
name = "finance-genie"
version = "0.1.0"
description = "Synthetic fraud dataset generator, verifier, and Databricks job runner for the finance-genie graph-enriched lakehouse demo."
requires-python = ">=3.12"
dependencies = [
    "databricks-job-runner",
    "neo4j",
    "pandas",
    "python-dotenv",
    "rich",
]

[tool.uv]
package = false
