[project]
name = "finance-genie-simple-finance-agent"
version = "0.1.0"
description = "simple-finance-agent for Databricks Model Serving."
requires-python = ">=3.12"
dependencies = [
    "databricks-agents>=1.1.0",
    "databricks-job-runner>=0.4.3",
    "databricks-langchain",
    "databricks-mcp",
    "databricks-sdk>=0.40",
    "langchain-core",
    "langgraph",
    "langgraph-prebuilt",
    "mcp",
    "mlflow>=3.1.3",
    "nest-asyncio",
    "pydantic>=2",
    "python-dotenv",
]

[tool.uv]
package = false
